# tally

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
src/: App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_seed_categories.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  budgets.rs  categories.rs  goals.rs  import.rs  investments.rs  mod.rs  recurring.rs  rules.rs  settings.rs  transactions.rs
src-tauri/src/db/: connection.rs
src-tauri/src/import/: boa_parser.rs  csv_parser.rs  mod.rs  pdf_parser.rs
src-tauri/src/models/: mod.rs
src/components/charts/: CashFlowChart.tsx  NetWorthChart.tsx  SpendingChart.tsx
src/components/import/: ImportDialog.tsx
src/components/layout/: AppShell.tsx  Header.tsx  PageContainer.tsx  PageSkeleton.tsx  Sidebar.tsx
src/components/ui/: button.tsx  checkbox.tsx
src/lib/: constants.ts  formatters.ts  tauri.ts
src/pages/: AccountDetail.tsx  Accounts.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  Goals.tsx  Import.tsx  Investments.tsx  Placeholder.tsx  Recurring.tsx  Reports.tsx  Rules.tsx  Settings.tsx  Transactions.tsx  Unlock.tsx
src/stores/: useAccountStore.ts  useAppStore.ts  useCategoryStore.ts  useTransactionStore.ts
src/types/: index.ts
