[package]
name = "tally"
version = "0.1.0"
description = "Tally - Personal Finance App"
authors = [""]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "tally_lib"

[[bin]]
name = "tally"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Database - SQLite with SQLCipher
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Note: We use rusqlite with bundled-sqlcipher for encryption
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Password hashing for key derivation
argon2 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File paths
dirs = "6"

# OFX/SGML Parsing
# sgmlish = "0.3"  # Add when implementing OFX parser

# CSV Parsing
csv = "1.3"

# PDF Parsing (using PDFium - Chrome's PDF library)
pdfium = "0.10"

# Regex for category rules
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
